--- a/Practika/App.config
+++ b/Practika/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="Educational_practice_RybakovEntities4" connectionString="metadata=res://*/BD.Model1.csdl|res://*/BD.Model1.ssdl|res://*/BD.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL-STUD1\SQL_001;initial catalog=Educational_practice_Rybakov;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    
+  <add name="Educational_practice_RybakovEntities" connectionString="metadata=res://*/BD.Model1.csdl|res://*/BD.Model1.ssdl|res://*/BD.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIN-MHJMGP2E8P5\SQLEXPRESS;initial catalog=Educational_practice_Rybakov;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
