--- a/Practika/Practika.csproj
+++ b/Practika/Practika.csproj
@@ -126,6 +126,9 @@
     <Compile Include="BD\Speciality.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="BD\sysdiagrams.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="BD\Teachers.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
